<resources>
    <string name="app_name">Selfpotify</string>

    <!-- Common -->
    <string name="cd_logo">Selfpotify logo</string>

    <!-- Screen 1: server setup -->
    <string name="server_setup_title">Connect to your server</string>
    <string name="server_setup_subtitle">Enter the address of your Selfpotify server</string>
    <string name="server_setup_address_hint">Server address</string>
    <string name="server_setup_address_helper">http://192.168.1.10:8080</string>
    <string name="server_setup_checking">Checking server…</string>
    <string name="server_setup_valid">Connected to %1$s</string>
    <string name="server_setup_error_unreachable">Couldn\'t reach the server. Check the address.</string>
    <string name="server_setup_error_not_selfpotify">That address is not a Selfpotify server.</string>
    <string name="server_setup_next">Next</string>

    <!-- Screen 2: login / register -->
    <string name="auth_login_title">Log in</string>
    <string name="auth_register_title">Sign up</string>
    <string name="auth_username_hint">Username</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_login_button">Log in</string>
    <string name="auth_register_button">Sign up</string>
    <string name="auth_switch_to_register">Don\'t have an account? Sign up</string>
    <string name="auth_switch_to_login">Already have an account? Log in</string>
    <string name="auth_error_invalid_credentials">Invalid username or password.</string>
    <string name="auth_error_username_taken">That username is already taken.</string>
    <string name="auth_error_network">Network error. Check your connection.</string>
    <string name="auth_error_unknown">Something went wrong. Try again.</string>
    <string name="auth_error_empty_fields">Enter a username and password.</string>
    <string name="auth_change_server">Change server</string>

    <!-- Bottom navigation tabs -->
    <string name="tab_discover">Discover</string>
    <string name="tab_search">Search</string>
    <string name="tab_library">Library</string>
    <string name="tab_profile">Profile</string>

    <!-- Discover -->
    <string name="discover_title">Discover</string>
    <string name="discover_error">Couldn\'t load discoveries. Try again.</string>
    <string name="discover_daily">Your daily discoveries</string>
    <string name="discover_artists">Artists recommended for you</string>

    <!-- Search -->
    <string name="search_title">Search</string>
    <string name="search_hint">Songs, artists, albums…</string>
    <string name="search_prompt">Search for songs, artists, albums, playlists, users and genres</string>
    <string name="search_no_results">No results for \"%1$s\"</string>
    <string name="search_error">Couldn\'t search. Try again.</string>
    <string name="search_clear">Clear</string>
    <string name="search_section_songs">Songs</string>
    <string name="search_section_artists">Artists</string>
    <string name="search_section_albums">Albums</string>
    <string name="search_section_playlists">Playlists</string>
    <string name="search_section_users">Users</string>
    <string name="search_section_genres">Genres</string>

    <!-- Detail screens (artist / album / playlist / user) -->
    <string name="cd_back">Back</string>
    <string name="detail_error">Couldn\'t load. Try again.</string>
    <string name="detail_role_artist">Artist</string>
    <string name="detail_no_tracks">No tracks yet.</string>
    <string name="detail_no_playlists">No public playlists yet.</string>
    <string name="cd_play_count">Plays</string>
    <string name="cd_playlist_edit">Edit playlist</string>
    <string name="cd_playlist_share">Share playlist</string>
    <string name="cd_playlist_shared">Shared playlist</string>
    <string name="cd_remove_from_playlist">Remove from playlist</string>

    <!-- Library -->
    <string name="library_title">Library</string>
    <string name="coming_soon">Coming soon</string>
    <string name="library_add_playlist">New playlist</string>
    <string name="library_my_playlists">Your playlists</string>
    <string name="library_shared">Shared with you</string>
    <string name="library_empty">You don\'t have any playlists yet. Create your first one.</string>
    <string name="library_error">Couldn\'t load your library.</string>

    <!-- Create / edit playlist form -->
    <string name="playlist_form_create_title">New playlist</string>
    <string name="playlist_form_edit_title">Edit playlist</string>
    <string name="playlist_form_name">Name</string>
    <string name="playlist_form_name_hint">My mix</string>
    <string name="playlist_form_description">Description</string>
    <string name="playlist_form_description_hint">For driving, the gym…</string>
    <string name="playlist_form_public">Public</string>
    <string name="playlist_form_public_hint">Other users will be able to see it.</string>
    <string name="playlist_form_cover">Cover</string>
    <string name="playlist_form_cover_clear">Remove cover</string>
    <string name="playlist_form_create">Create</string>
    <string name="playlist_form_save">Save</string>
    <string name="playlist_form_cancel">Cancel</string>
    <string name="playlist_form_delete">Delete</string>
    <string name="playlist_form_error">Something went wrong. Try again.</string>
    <string name="playlist_delete_confirm_title">Delete playlist?</string>
    <string name="playlist_delete_confirm_message">This can\'t be undone.</string>
    <string name="playlist_delete_confirm">Delete</string>

    <!-- Share playlist sheet (magic link) -->
    <string name="playlist_share_title">Share playlist</string>
    <string name="share_description">Anyone with this single-use link can join as a collaborator.</string>
    <string name="share_link_label">Invite link</string>
    <string name="share_copy">Copy</string>
    <string name="share_send">Share</string>
    <string name="share_copied">Link copied</string>
    <string name="share_regenerate">Generate another link</string>
    <string name="share_error">Couldn\'t generate the link.</string>
    <string name="share_collaborators">Collaborators</string>
    <string name="share_no_collaborators">No collaborators yet.</string>
    <string name="share_remove_collaborator">Remove collaborator</string>
    <string name="share_redeem_error">This invitation link isn\'t valid or has already been used.</string>

    <!-- Profile -->
    <string name="profile_logout">Log out</string>
    <string name="profile_change_server">Change server</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_edit_name">Edit name</string>
    <string name="profile_edit_name_hint">Your name</string>
    <string name="profile_save">Save</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_change_photo">Change photo</string>
    <string name="profile_remove_photo">Remove photo</string>
    <string name="profile_follow">Follow</string>
    <string name="profile_following_state">Following</string>
    <string name="profile_unfollow">Unfollow</string>
    <string name="cd_change_photo">Change profile photo</string>
    <string name="cd_edit_name">Edit name</string>

    <!-- Followers / following lists -->
    <string name="follow_list_empty">Nothing here yet.</string>

    <!-- Player -->
    <string name="player_play">Play</string>
    <string name="player_pause">Pause</string>
    <string name="player_next">Next</string>
    <string name="player_previous">Previous</string>
    <string name="player_loop">Repeat</string>
    <string name="player_add_to_playlist">Add to playlist</string>
    <string name="player_in_playlist">In a playlist</string>
    <string name="player_collapse">Collapse player</string>

    <!-- Add to playlist sheet -->
    <string name="add_to_playlist_title">Add to playlist</string>
    <string name="add_to_playlist_empty">You don\'t have any playlists yet.</string>
    <string name="add_to_playlist_error">Couldn\'t load your playlists.</string>
    <string name="add_to_playlist_add">Add to this playlist</string>
    <string name="add_to_playlist_remove">Remove from this playlist</string>
    <string name="playlist_song_count">%1$d songs</string>
    <string name="playlist_track_removed">Removed \"%1$s\"</string>
    <string name="playlist_track_unknown">track</string>
    <string name="action_undo">Undo</string>

    <!-- Connection lost -->
    <string name="offline_message">There is currently no connection to the server</string>
    <string name="offline_retry">Retry connection</string>
    <string name="offline_disconnect">Disconnect from server</string>
</resources>
